# tiny-table

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs  styled.rs  table.rs
src/: color.rs  lib.rs  table.rs
src/table/: style.rs  text.rs
