[package]
name = "tiny-table"
version = "0.2.2"
edition = "2024"
description = "A simple and customizable table library for Rust."
license = "MIT"
repository = "https://github.com/sn0w12/tiny-table"
homepage = "https://github.com/sn0w12/tiny-table"
keywords = ["table", "terminal"]

[features]
default = ["style"]
style = []

[lib]
name = "tiny_table"

[dependencies]
terminal_size = "0.4.4"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
